--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -18,13 +18,12 @@
 
 @config "../../tailwind.config.ts";
 
+@theme {
+  --default-transition-duration: 300ms;
+}
+
 @theme inline {
   --color-primary: var(--primary-color);
   --color-naive-border: var(--border-color);
   --color-naive-card: var(--card-color);
-
-  --ease-naive-bezier: var(--cubic-bezier-ease-in-out);
-  --ease-naive-bezier-in: var(--cubic-bezier-ease-in);
-  --ease-naive-bezier-out: var(--cubic-bezier-ease-out);
-  --ease-naive-bezier-in-out: var(--cubic-bezier-ease-in-out);
 }
