fix: shiki code highlight toggle theme

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,3 +5,21 @@
     @apply overflow-hidden tracking-wide;
   }
 }
+
+@layer shiki {
+  html.dark .shiki,
+  html.dark .shiki span {
+    color: var(--shiki-dark) !important;
+    background-color: var(--shiki-dark-bg) !important;
+    /* 可选，如果你还希望同步字体样式 */
+    font-style: var(--shiki-dark-font-style) !important;
+    font-weight: var(--shiki-dark-font-weight) !important;
+    text-decoration: var(--shiki-dark-text-decoration) !important;
+    transition: background-color var(--default-transition-duration)
+      var(--default-transition-timing-function);
+  }
+  pre.shiki {
+    transition: background-color var(--default-transition-duration)
+      var(--default-transition-timing-function);
+  }
+}
