--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,5 +25,7 @@
 @theme inline {
   --color-primary: var(--primary-color);
   --color-naive-border: var(--border-color);
+  --radius-naive: var(--border-radius);
+  --radius-naive-sm: calc(var(--border-radius-small));
   --color-naive-card: var(--card-color);
 }
