--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,7 +25,8 @@
 @theme inline {
   --color-primary: var(--primary-color);
   --color-naive-border: var(--border-color);
+  --color-naive-card: var(--card-color);
+  --color-naive-button-hover: var(--button-color-2-hover);
   --radius-naive: var(--border-radius);
   --radius-naive-sm: calc(var(--border-radius-small));
-  --color-naive-card: var(--card-color);
 }
