refactor: enhance sidebar menu behavior and styling with new width properties

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,7 +26,8 @@
   --color-primary: var(--primary-color);
   --color-naive-border: var(--border-color);
   --color-naive-card: var(--card-color);
-  --color-naive-button-hover: var(--button-color-2-hover);
+  --color-naive-text3: var(--text-color-3);
+  --color-naive-button2-hover: var(--button-color-2-hover);
   --radius-naive: var(--border-radius);
   --radius-naive-sm: calc(var(--border-radius-small));
 }
